--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,11 @@
+p {
+  colour: Blue; 
+  text-align: center; 
+}
+
+
+body {
+	background-image: url"https://www.ihdimages.com/wp-content/uploadsktz/2014/12/christmas_photography_tumblr_desktop_wallpaper.jpg";
+}
+
 
