--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@ p {
 
 
 body {
-	background-image: url"https://www.ihdimages.com/wp-content/uploadsktz/2014/12/christmas_photography_tumblr_desktop_wallpaper.jpg";
+	background-image: url("https://www.ihdimages.com/wp-content/uploadsktz/2014/12/christmas_photography_tumblr_desktop_wallpaper.jpg");
 }
 
 
